--- a/blog-handoff-burnout.html
+++ b/blog-handoff-burnout.html
@@ -103,37 +103,70 @@
       font-size: 12px;
       color: var(--bm-gray);
     }
+    .article-meta {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-bottom: 16px;
+    }
+    .article-author {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      margin-top: 20px;
+    }
+    .author-avatar {
+      width: 50px;
+      height: 50px;
+      background: var(--bm-teal);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      font-weight: 900;
+      color: var(--bm-dark-teal);
+    }
+    .author-info h4 {
+      font-size: 15px;
+      font-weight: 900;
+      color: var(--bm-dark-teal);
+    }
+    .author-info p {
+      font-size: 12px;
+      color: var(--bm-gray);
+    }
 
-    .blog-content {
+    .article-content {
       max-width: 750px;
       margin: 0 auto;
       padding: 60px 20px;
     }
-    .blog-content p {
+    .article-content p {
       font-size: 17px;
       line-height: 1.9;
       margin-bottom: 24px;
       color: #374151;
     }
-    .blog-content h2 {
+    .article-content h2 {
       font-size: 28px;
       font-weight: 900;
       color: var(--bm-dark-teal);
       margin: 50px 0 20px;
     }
-    .blog-content h3 {
+    .article-content h3 {
       font-size: 22px;
       font-weight: 700;
       color: var(--bm-dark-teal);
       margin: 35px 0 15px;
     }
-    .blog-content ul, .blog-content ol {
+    .article-content ul, .article-content ol {
       margin: 20px 0 30px 25px;
       font-size: 17px;
       color: #374151;
     }
-    .blog-content li { margin-bottom: 10px; line-height: 1.7; }
-    .blog-content blockquote {
+    .article-content li { margin-bottom: 10px; line-height: 1.7; }
+    .article-content blockquote {
       background: var(--bm-teal-light);
       padding: 25px 30px;
       border-left: 4px solid var(--bm-teal);
@@ -156,7 +189,7 @@
       font-weight: 900;
       margin-bottom: 10px;
     }
-    .highlight-box p { margin-bottom: -12%; font-size: 15px; }
+    .highlight-box p { margin-bottom: 0; font-size: 15px; }
 
     .stat-box {
       background: var(--bm-light-gray);
@@ -304,9 +337,17 @@
     @media (max-width: 768px) {
       .nav-links { display: none; }
       .nav-hamburger { display: flex; }
-      .article-title { font-size: 32px; }
+      .article-header { padding: 120px 20px 40px; }
+      .article-title { font-size: 26px; }
+      .article-content { padding: 40px 20px; }
+      .article-content p { font-size: 16px; }
+      .article-content h2 { font-size: 22px; margin: 35px 0 15px; }
+      .article-content h3 { font-size: 18px; }
       .stat-grid { grid-template-columns: 1fr; }
-
+      .highlight-box { padding: 20px; }
+      .stat-box { padding: 20px; }
+      .cta-box { padding: 30px 20px; }
+      .cta-box h3 { font-size: 20px; }
     }
   </style>
 </head>
