--- a/company.html
+++ b/company.html
@@ -619,7 +619,7 @@
           <div class="team-avatar">AS</div>
           <h3 class="team-name">Anish J. Shah, MD, FACOG</h3>
           <div class="team-role">CEO, Founder</div>
-          <p class="team-bio">Board Certified OBGYN at Penn Princeton Medical Center. Cornell CS/Math. Harvard AI in Healthcare. 4,000+ deliveries.</p>
+          <p class="team-bio">Board Certified OBGYN at Penn Medicine Princeton Medical Center. Cornell Neurobio + Math/CS. Harvard AI in Healthcare. 4,000+ deliveries.</p>
         </a>
 
         <a href="https://www.linkedin.com/in/maxguillet/" target="_blank" class="team-card reveal">
