--- a/careers.html
+++ b/careers.html
@@ -358,7 +358,7 @@
       margin-bottom: 28px;
     }
     .job-section:last-child {
-      margin-bottom: -12%;
+      margin-bottom: 0;
     }
     .job-section-title {
       font-size: 12px;
