--- a/blog-global-payments.html
+++ b/blog-global-payments.html
@@ -267,28 +267,8 @@
     .footer-badge .check {
       color: #4ade80;
     }
-    /* Mobile footer - proper responsive design without scaling */
     @media (max-width: 1024px) {
-      .footer {
-        padding: 40px 12px 20px;
-        
-        
-      }
       .cta-section { padding: 60px 20px; }
-      .footer-email-link { display: none !important; }
-      .footer-grid {
-        grid-template-columns: 1.3fr repeat(4, 1fr) !important;
-        gap: 8px !important;
-      }
-      .footer-col h4 { font-size: 8px; letter-spacing: 1px; margin-bottom: 8px; }
-      .footer-col a { font-size: 9px; margin-bottom: 6px; line-height: 1.3; }
-      .footer-inner { max-width: 100%; }
-      .footer-brand-logo img { height: 24px; }
-      .footer-brand p { font-size: 9px; max-width: 100%; margin-bottom: 10px; }
-      .footer-bottom { flex-direction: column; align-items: center; gap: 12px; padding-top: 20px; }
-      .footer-legal { flex-wrap: wrap; justify-content: center; gap: 6px; font-size: 8px; }
-      .footer-badges { justify-content: center; gap: 8px; }
-      .footer-badge { font-size: 8px; padding: 4px 8px; }
     }
 
     @media (max-width: 768px) {
@@ -297,6 +277,23 @@
       .article-title { font-size: 32px; }
       .code-list { grid-template-columns: 1fr; }
 
+      /* Mobile footer */
+      .footer { padding: 40px 12px 20px; }
+      .footer-inner { max-width: 100%; }
+      .footer-email-link { display: none !important; }
+      .footer-grid { grid-template-columns: 1.3fr repeat(4, 1fr) !important; gap: 8px !important; }
+      .footer-brand-logo img { height: 24px; }
+      .footer-brand p { font-size: 9px; max-width: 100%; margin-bottom: 10px; }
+      .footer-social { gap: 6px; }
+      .footer-social-icon { width: 24px; height: 24px; }
+      .footer-social-icon svg { width: 14px; height: 14px; }
+      .footer-col h4 { font-size: 8px; letter-spacing: 1px; margin-bottom: 8px; }
+      .footer-col a { font-size: 9px; margin-bottom: 6px; line-height: 1.3; }
+      .footer-bottom { flex-direction: column; align-items: center; gap: 12px; padding-top: 20px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; gap: 6px; font-size: 8px; }
+      .footer-legal span, .footer-legal a { font-size: 8px; }
+      .footer-badges { justify-content: center; gap: 8px; }
+      .footer-badge { font-size: 8px; padding: 4px 8px; }
     }
   </style>
 </head>
